fix: change grid gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -145,8 +145,7 @@
 .content-section {
   display: grid;
   grid-template-columns: 1fr;
-  column-gap: 40px;
-  row-gap: 20px;
+  gap: 20px;
   padding: 0 10px;
 }
 
